--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,7 +33,8 @@ h2{
     font-weight: bold;
     padding: 20px;
     float:none;
-    font-family: 'Rozha One', serif;}
+    font-family: 'Rozha One', serif;
+text-decoration-color: black;}
 
 h3{
     color: darkcyan;
@@ -68,10 +69,12 @@ div.image{
     height: 100%;}
 
 .headingimg{width: 100%;
-height:auto;}
+height:auto;
+    border: 11px solid black;}
 
 .captiancookrock{
-    width: 100%;}
+    width: 100%;
+border: 11px solid black;}
 
 .frontengineersoffice{
     transform: rotate(90deg);
@@ -103,7 +106,8 @@ transform: rotate(90deg);
     float: inherit;}
 
 .kingstonpier{
-    width: 100%;}
+    width: 100%;
+border: 11px solid black;}
 
 .boatsheds{
 transform: rotate(90deg);
@@ -116,7 +120,8 @@ transform: rotate(90deg);
     float: inherit;}
 
 .barricsandstore{
-width:100%;}
+width:100%;
+border: 11px solid black;}
 
 .gaolentrence{
 transform: rotate(90deg);
@@ -129,7 +134,8 @@ transform: rotate(90deg);
     float: inherit;}
 
 .barricplan{
-width: 100%;}
+width: 100%;
+border: 11px solid black;}
 
 .shoreline{
 transform: rotate(90deg);
